--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -124,6 +124,10 @@
     </div>
 </div>
 
+<form asp-controller="User" asp-action="GetUserNameById" method="POST">
+    <button type="submit" id="somethimg" class="btn btn-success">Get username by id</button>
+</form>
+
 <!-- MODAL Change password -->
 <div class="modal fade" id="modalChangePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
