--- a/Views/CheckOut/Index.cshtml
+++ b/Views/CheckOut/Index.cshtml
@@ -1,24 +1,21 @@
 @model BookCave.Models.InputModels.CheckOutInputModel
 
-<div class="container body-container">
+<div class="container body-container pt-2">
     <div class="steps-form-2">
-        <div class="mt-3 steps-row-2 setup-panel-2 d-flex justify-content-between">
+        <div class="steps-row-2 setup-panel-2 d-flex justify-content-between">
             <div class="steps-step-2">
-                <a href="#step-1" type="button" class="btn btn-amber btn-circle-2 waves-effect ml-0" data-toggle="tooltip" data-placement="top" title="Basic Information"><i class="fa fa-folder-open-o" aria-hidden="true"></i></a>
+                <a href="#step-1" type="button" class="btn btn-amber btn-circle-2 waves-effect ml-0" data-toggle="tooltip" data-placement="top" title="Basic Information"><i class="fa fa-address-card" aria-hidden="true"></i></a>
             </div>
             <div class="steps-step-2">
-                <a href="#step-2" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect" data-toggle="tooltip" data-placement="top" title="Personal Data"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                <a href="#step-2" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect" data-toggle="tooltip" data-placement="top" title="Personal Data" disabled><i class="fa fa-eye" aria-hidden="true"></i></a>
             </div>
             <div class="steps-step-2">
-                <a href="#step-3" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect" data-toggle="tooltip" data-placement="top" title="Terms and Conditions"><i class="fa fa-photo" aria-hidden="true"></i></a>
-            </div>
-            <div class="steps-step-2">
-                <a href="#step-4" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect mr-0" data-toggle="tooltip" data-placement="top" title="Finish"><i class="fa fa-check" aria-hidden="true"></i></a>
+                <a href="#step-3" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect mr-0" data-toggle="tooltip" data-placement="top" title="Terms and Conditions" disabled><i class="fa fa-check" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
 
-<div class="card container">
+<div class="card container mt-2">
 <!-- First Step -->
 <form role="form" asp-action="Index" asp-controller="CheckOut" method="post" id="checkOutForm">
      <div class="row setup-content-2" id="step-1">
@@ -323,23 +320,6 @@
 
     <!-- Third Step -->
     <div class="row setup-content-2" id="step-3">
-        <div class="col-md-12">
-            <h3 class="font-weight-bold pl-0 my-4"><strong>Terms and conditions</strong></h3>
-            <div class="form-check">
-                <input type="checkbox" id="checkbox111" class="form-check-input">
-                <label for="checkbox111" class="form-check-label">I agree to the terms and conditions</label>
-            </div>
-            <div class="form-check">
-                <input type="checkbox" id="checkbox112" class="form-check-input">
-                <label for="checkbox112" class="form-check-label">I want to receive newsletter</label>
-            </div>
-            <button class="btn btn-mdb-color btn-rounded prevBtn-2 float-left" type="button">Previous</button>
-            <button class="btn btn-mdb-color btn-rounded nextBtn-2 float-right" type="button">Next</button>
-        </div>
-    </div>
-
-    <!-- Fourth Step -->
-    <div class="row setup-content-2" id="step-4">
         <div class="col-md-12">
             <h3 class="font-weight-bold pl-0 my-4"><strong>Finish</strong></h3>
             <h2 class="text-center font-weight-bold my-4">Registration completed!</h2>
