--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -142,8 +142,8 @@
   width: 70px;
   height: 70px;
   border: 2px solid #59698D;
-  background-color: white !important;
-  color: #59698D !important;
+  background-color: white;
+  color: #59698D;
   border-radius: 50%;
   padding: 22px 18px 15px 18px;
   margin-top: -22px;
@@ -159,6 +159,18 @@
   font-size: 1.7rem;
 }
 
+.btn-blue-grey {
+  background-color: #78909c;
+  color: #fff;
+}
+.btn-amber {
+  background-color: #ffa000;
+  color: #fff;
+}
+.btn-success {
+  background-color: #00c851!;
+  color: #fff;
+}
 /* For Checkout */
 
 /* For Account Information */
