--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -169,7 +169,7 @@
 
             <div class="row">
                 <div class="col un-center" id="FavoriteBookImg">
-                    <img class="img-fluid mt-5 ml-3" id="errorImage" src="~/images/errorImg.png">
+                    <img width="150rem" height="150rem" class="mt-5 ml-3 mb-5" id="errorImage" src="~/images/errorImg.png">
                 </div>
 
                 <div class="col justify-content-center text-left un-center" id="FavoriteBookInfo">
