--- a/Views/Manage/ViewBooks.cshtml
+++ b/Views/Manage/ViewBooks.cshtml
@@ -3,9 +3,9 @@
         <div class="view gradient-card-header blue-gradient p-3">
             <h4 class="h2 mb-0">Existing Books</h4>
         </div>
-        <div class="card-body ">
+        <div class="card-body">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 table-responsive">
                     <table id="viewBooksTable" class="table table-striped" cellspacing="0" width="100%">
                         <thead>
                             <tr>
