--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,8 @@
 <body class="grey lighten-4">
 
 @{
-     var controller = ViewContext.RouteData.Values["controller"].ToString().ToLower();
+     var controller = ViewContext.RouteData.Values["Controller"];
+     var action = ViewContext.RouteData.Values["Action"];
 
      if (controller == "home"){
          <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar rgba-black-strong">
@@ -36,15 +37,15 @@
   <!-- Render footer -->
   @await Html.PartialAsync("_footer.cshtml")
    
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="~/lib/mdb/js/jquery-3.2.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous" charset="utf-8"></script>
+  <script type="text/javascript" src="~/lib/mdb/js/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="~/lib/mdb/js/popper.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/mdb.min.js"></script>
   <script type="text/javascript" src="~/js/site.js"></script>
+<script type="text/javascript" src="~/js/rater.js"></script>
 
   @{
-     
 
     if (controller == "user")
     {
@@ -65,5 +66,9 @@
   }
   
   @RenderSection("Scripts", required: false)
+
+
+<script>
+</script>
 </body>
 </html>
