--- a/Views/Shared/_accountDropdown.cshtml
+++ b/Views/Shared/_accountDropdown.cshtml
@@ -1,7 +1,7 @@
 @{
     if (User.Identity.IsAuthenticated)
     {
-        <a class="dropdown-item waves-light" asp-controller="User" asp-action="AccountInformation"><i class="fa fa-vcard" aria-hidden="true"></i> Manage account information</a>
+        <a class="dropdown-item waves-light" asp-controller="User" asp-action="AccountInformation"><i class="fa fa-vcard" aria-hidden="true"></i> Account Information</a>
         <div class="divider dropdown-divider"></div>
         <a class="dropdown-item waves-light" asp-controller="User" asp-action="LogOut"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
     } else {
