--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -96,7 +96,7 @@ html {
 }
 
 .navbar {
-    background-color: rgba(0, 0, 0, .3)
+    background-color: rgba(0, 0, 0, .3);
 }
 
 .page-footer,
@@ -142,13 +142,9 @@ header,
 }
 
 .navbar img {
-    width: 10%;
-    height: auto;
+    height: 3rem;
 }
 
-.navbar-nav {
-    margin-left: -70%;
-}
 
 .nav-search {
     padding-top: 0px;
